--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -56,6 +56,81 @@
     grid-column: 1/-1;
     background-color: yellow;
 }
+.about-responsive{
+    display: none;
+}
 @media screen and (max-width: 600px){
-
+    .profile-container{
+        display: none;
+    }
+    .about-responsive{
+        display: grid;
+        grid-template-columns: repeat(12,1fr);
+        gap: 10px;
+        padding: 10px;
+        margin-bottom: 40px;
+    }
+    .headline{
+        grid-column: 1/-1;
+        background-color: #26272b;
+    }
+    .aboutmeheadline2::before{
+        color: #ccd6f6;
+        content: "About Me";
+    }
+    .circle-image{
+        grid-column: 1/-1;
+        background-color: #9fa7bd;
+    }
+    .aboutme-summery{
+        grid-column: 1/-1;
+    }
+    .highlighs-skills{
+        grid-column: 1/-1;
+    }
+    .parent{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 40vh;
+    }
+    .circle{
+        position: relative;
+        width: 200px;
+        height: 200px;
+        border-radius: 40%;
+        /* background: #ccc; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .imglogo{
+        position: absolute;
+        width: 202px;
+        height: 200px;
+        background: url(../images/mypicture.jpg);
+        background-size: cover;
+        border-radius: 50%;
+    }
+    .text{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        animation: rotateText 10s linear infinite;
+    }
+    @keyframes rotateText {
+        0%{
+            transform: rotate(360deg);
+        }
+        100%{
+            transform: rotate(0deg);
+        }
+        
+    }
+    .text span{
+        position: absolute;
+        left: 50%;
+        font-size: 1.2em;
+        transform-origin: 0 100px;
+    }
 }
