--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -17,7 +17,7 @@ a {
   padding: 10px 5%;
   align-items: center;
   color: rgb(255, 255, 255);
-  background-color: #061224;
+  /* background-color: #061224; */
 }
 .logo {
   font-size: 25px;
@@ -62,6 +62,17 @@ a {
 
 .nav__toggler {
   display: none;
+}
+.header{
+  transition: .4s all ease;
+}
+.header.active{
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 7%;
+  padding: 0px 30px;
+  background-color: #061224;
 }
 @media screen and (max-width: 600px) {
   /* .navbar{
