--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -9,6 +9,7 @@
     grid-column: 1/-1;
     text-align: center;
     color: #ccd6f6;
+    margin-bottom: 35px;
 }
 .Timeline{
     grid-column: 1/-1;
