--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -230,10 +230,10 @@
 
     .frontend-skill {
       width: 300px;
-      margin: 60px auto;
+      margin: 30px auto;
       color: #fff;
-      padding: 20px;
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+      padding: 15px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
   
     .backend-skill{
@@ -242,6 +242,98 @@
       color: #fff;
       padding: 20px;
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+
+    .bar {
+      background: #353b48;
+      display: block;
+      height: 18px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
+      overflow: hidden;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    }
+
+    .bar span {
+      height: 20px;
+      float: left;
+      background: linear-gradient(
+        135deg,
+        rgba(236, 0, 140, 1) 0%,
+        rgba(252, 103, 103, 1) 100%
+      );
+    }
+
+    span{
+      margin-left: 0px;
+    }
+
+    .bar .html::after{
+      content: "80%";
+      padding: 10px;
+      color: #fff;
+      margin-left: 50%;
+    }
+
+    .bar .css::after{
+      content: "70%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .javascript::after{
+      content: "70%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .reactjs::after{
+      content: "75%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .nextjs::after{
+      content: "40%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .bootstrap::after{
+      content: "70%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .materialui::after{
+      content: "60%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .nodejs::after{
+      content: "65%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .python::after{
+      content: "60%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .mongodb::after{
+      content: "70%";
+      padding: 10px;
+      margin-left: 50%;
+    }
+
+    .bar .mysql::after{
+      content: "72%";
+      padding: 10px;
+      margin-left: 50%;
     }
 
   }
