--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -230,7 +230,7 @@
 
     .frontend-skill {
       width: 300px;
-      margin: 30px auto;
+      margin: 30px -1.8rem;
       color: #fff;
       padding: 15px;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -238,7 +238,7 @@
   
     .backend-skill{
       width: 300px;
-      margin: 60px auto;
+      margin: 60px -1.8rem;
       color: #fff;
       padding: 20px;
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
