--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
   background-color: #0a192f;
 }
 
-.contact, 
+/* .contact, 
 .experience, 
 .work{
   display: flex;
@@ -18,4 +18,4 @@ body{
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-}
+} */
