--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -23,7 +23,7 @@
     /* border:1px solid red; */
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
     /* justify-content: space-between; */
   }
 
@@ -33,6 +33,7 @@
     width: 100%;
     max-width: 410px;
     height: 500px;
+    max-height: 600px;
     padding: 20px;
     background: #373b56;
     margin: 0px 0;
@@ -66,11 +67,47 @@
   }
 
   .showimg{
-    margin: 5px 5px;
+    margin: 5px;
     height: 80%;
     
     /* background-color: #d7daec; */
     /* border: 1px solid red; */
+  }
+
+  .card-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+  }
+
+  .cardbottombtn{
+    background-color: #354299;
+    border: none;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: rgba(51, 51, 51, 0.4) 0px 2px 10px 0px,
+    rgba(58, 57, 57, 0.5) 0px 2px 25px 0px;
+  }
+
+  .cardbottombtn:hover{
+    background-color: #29305e;
+    transition: all 0.3s;
+    color: rgb(221, 221, 221);
+  }
+
+  .projecttitle{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+  }
+
+  .projectplatform{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 13px;
+    font-weight: 200;
+    margin-top: 3px;
   }
   
   /* .row {
