--- a/src/styles/contactform.css
+++ b/src/styles/contactform.css
@@ -6,11 +6,28 @@
 
 
 .contact__form{
+    /* border: 1px solid green; */
     display: grid;
     grid-template-columns: repeat(1,1fr);
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
     justify-items: center;
     
+}
+.validerror{
+  display: flex;
+  justify-content: center;
+  color: rgb(236, 72, 72);
+  font-size: .8rem;
+  font-weight: 100;
+}
+
+.messageError{
+  display: flex;
+  justify-content: center;
+  margin-top: 60px;
+  color: rgb(236, 72, 72);
+  font-size: .8rem;
+  font-weight: 100;
 }
 
 .form {
@@ -81,9 +98,18 @@
     margin: 0;
     text-align: center;
     justify-content: center; */
-    margin-top: 50px;
+    /* margin-top: 50px; */
     outline: none;
     border: 2px solid #fafafa;
+}
+
+.customOverlay {
+  background: rgba(36, 123, 160, 0.7);
+}
+.customModal {
+  background: #b2dbbf;
+  max-width: 500px;
+  width: 100%;
 }
 
 @media screen and (max-width: 600px){
