add loader in contact form

--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -13,6 +13,7 @@
 
   .container{
     display: flex;
+    justify-content: center;
     align-items: stretch;
     margin-bottom: 20px;
   }
@@ -226,6 +227,8 @@
     .container{
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .frontend-skill {
