--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -24,8 +24,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    /* justify-content: space-between; */
-  }
+    justify-content: center;
+}
 
   .card{
     /* border: 1px solid green; */
@@ -108,6 +108,20 @@
     font-size: 13px;
     font-weight: 200;
     margin-top: 3px;
+  }
+
+
+  @media screen and (max-width: 600px){
+    .container {
+      width: 100%;
+      max-width: 1000px;
+      margin: 20px auto;
+      /* border:1px solid red; */
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: center;
+    }
   }
   
   /* .row {
