--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,6 +8,41 @@ body {
   /* color: rgb(255, 255, 255); */
   /* background-color: #0a192f; */
 }
+
+/* body.light {
+  background-color: #0a192f;
+  color: #ffffff;
+}
+
+body.dark {
+  background-color: #ffffff;
+  color: #080202;
+} */
+
+/* Button styles for theme toggle */
+/* .theme-toggle-button {
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  font-size: 15px;
+}
+
+.theme-toggle-button.light {
+  background-color: #333;
+  color: #fff;
+}
+
+.theme-toggle-button.dark {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
+}
+
+.theme-toggle-button:hover {
+  opacity: 0.8;
+} */
+
 a {
   color: rgb(255, 255, 255);
 }
@@ -27,6 +62,8 @@ a {
 }
 .navbar_ul {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .navbar_ul li {
   display: inline-block;
@@ -72,7 +109,9 @@ a {
   width: 100%;
   height: 7%;
   padding: 0px 30px;
-  background-color: #061224;
+  /* background-color: #061224; */
+  background-color: rgba(6, 18, 36, 0.9);
+  backdrop-filter: blur(1px);
 }
 @media screen and (max-width: 600px) {
   /* .navbar{
